new priority order for 'queue' : 1.) commandline option, 2.) config, 3.) default value (all.q)

--- a/python/LxplusZll2017config/datacards.ini
+++ b/python/LxplusZll2017config/datacards.ini
@@ -38,8 +38,8 @@ bTagVar = Jet_btagDeepB[hJidx[1]]
 ;BDTlow = ZllBDT_lowptDeepCSV.Nominal
 ;BDThigh = ZllBDT_highptDeepCSV.Nominal
 ;DNN
-BDTlow = dnn15low.Nominal
-BDThigh = dnn15high.Nominal
+BDTlow = dnn15Low.Nominal
+BDThigh = dnn15High.Nominal
 ;BDT VV
 BDTVVlow = ZllBDTVV_lowpt.Nominal
 BDTVVhigh = ZllBDTVV_highpt.Nominal
