--- a/python/LxplusZll2017config/general.ini
+++ b/python/LxplusZll2017config/general.ini
@@ -65,7 +65,8 @@ Selection2017V2JERfix = Selection2017V2JERfix.Selection2017V2JERfix()
 ; instead of 'prep' run sys with --addCollection Sys.prepJERfix
 prepJERfix = ['Sys.DropMETsys','Sys.DropFatJet','Sys.DropTau','Sys.DropPhoton','Sys.DropSubJet','Sys.DropTrigObj','Sys.Selection2017V2JERfix','Sys.Run2017BmuHLT','Sys.vLeptons','Sys.isData']
 sysJERfix = ['Sys.electronSF','Sys.muonSF','Sys.HiggsCandidateSystematics', 'Sys.PUweight','Sys.BTagWeightsJERfix']
-
+tf15low = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_lowpt15')
+tf15high = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_highpt15')
 ;!! -------------------------
 ;!! REGRESSION
 ;!! -------------------------
