--- a/python/Zll2016config/paths.ini
+++ b/python/Zll2016config/paths.ini
@@ -145,15 +145,22 @@ HADDout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!C
 #SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag/
 #SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhigh/
 
-SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhigh/
-SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhighLow/
+#SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/berger_p2/ZllHbb13TeV_V25/sys/test_kinFitter_dnnHighLow/
+SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180524_dnn15low/
+#SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhigh/
+#SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhighLow/
+
+#SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhigh/
+#SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/berger_p2/ZllHbb13TeV_V25/sys/test_kinFitter_dnnHighLow/
+#SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180524_dnn15low/
+SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180524_dnn15highlow/
 
 ;MVAin: <!Directories|SYSout!>
 ;MVAout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/VHbb/ZllHbb13TeV_V25/eval_v15/
 
 ;MVAin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8redo_weights_btag_fsr_v2/
-#MVAin: <!Directories|SYSout!> 
-MVAin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8redo_weights_btag_fsr_v2/
+MVAin: <!Directories|SYSout!> 
+#MVAin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8redo_weights_btag_fsr_v2/
 MVAout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_dnn23_bdt_dnn15lowAndHigh_incl_dnnBtagHigh_retrainedBDT/
 
 ;;;;;;;;;;
