--- a/python/Zll2016config/training.ini
+++ b/python/Zll2016config/training.ini
@@ -86,12 +86,13 @@ factorysettings = !V:Color:!DrawProgressBar:AnalysisType=Classification:Transfor
 ;List_for_submitscript: ZllBDT_lowptCMVA_MLPv1,ZllBDT_highptCMVA_MLPv1,ZllBDT_highptCMVAnew
 ;List_for_submitscript: ZllBDT_highpt_incl
 ;default signal regions with 15 inputs
-List_for_submitscript: ZllBDT_lowptCMVA,ZllBDT_highptCMVA
+;List_for_submitscript: ZllBDT_lowptCMVA,ZllBDT_highptCMVA
 ;BDT/DNN with 23 inputs:
 ;List_for_submitscript: ZllBDT_lowptCMVA,ZllBDT_highptCMVA,ZllBDT_lowptCMVAnew,ZllBDT_highptCMVAnew
 ;List_for_submitscript: tfZllDNN_highpt15tight,tfZllDNN_lowpt15tight
 ;List_for_submitscript: tfZllDNN_incl15
-
+;List_for_submitscript: tfZllDNN_lowpt15,tfZllDNN_highpt15
+List_for_submitscript: tfZllDNN_lowpt23,tfZllDNN_highpt23
 ;,ZllBDT_highptCMVAnew,ZllBDT_lowptCMVAnew
 
 ;default
@@ -219,9 +220,9 @@ backgrounds: [<!Plot_general|allBKG!>]
 treeVarSet: ZllDNNVars15 
 treeCut: ZllBDT_lowpt
 branchName: dnn15Low
-tensorflowConfig: tfZllDNN/export/Zll2016lowpt_15_qAloss_v1/Zll2016lowpt_15_qAloss_H6v2.cfg
-scalerDump: tfZllDNN/export/Zll2016lowpt_15_qAloss_v1/scaler.dmp
-checkpoint: tfZllDNN/export/Zll2016lowpt_15_qAloss_v1/checkpoints/model.ckpt
+tensorflowConfig: tfZllDNN/Zll2016lowpt-15-t3.cfg
+scalerDump: tfZllDNN/results//tfZllDNN/tfZllDNN_lowpt23.dmpz/128-64-32-16-8/0.35-0.35-0.35-0.35-0.35/2.000e-03/rnd_1/scaler.dmp
+checkpoint: tfZllDNN/results//tfZllDNN/tfZllDNN_lowpt23.dmpz/128-64-32-16-8/0.35-0.35-0.35-0.35-0.35/2.000e-03/rnd_1/checkpoints/model.ckpt
 
 [tfZllDNN_highpt15]
 MVAtype: <!MVAGeneral|type!>
@@ -229,6 +230,28 @@ MVAsettings: <!MVAGeneral|SettingsAll_highd!>
 signals: [<!Plot_general|allSIG!>]
 backgrounds: [<!Plot_general|allBKG!>]
 treeVarSet: ZllDNNVars15 
+branchName: dnn15High
+treeCut: ZllBDT_highpt
+tensorflowConfig: tfZllDNN/Zll2016highpt-15-t3.cfg
+scalerDump: tfZllDNN/results//tfZllDNN/tfZllDNN_highpt23.dmpz/128-64-32-16-8/0.35-0.50-0.50-0.50-0.50/1.000e-03/rnd_1/scaler.dmp
+checkpoint: tfZllDNN/results//tfZllDNN/tfZllDNN_highpt23.dmpz/128-64-32-16-8/0.35-0.50-0.50-0.50-0.50/1.000e-03/rnd_1/checkpoints/model.ckpt
+
+[tfZllDNN_lowpt23]
+signals: [<!Plot_general|allSIG!>]
+backgrounds: [<!Plot_general|allBKG!>]
+treeVarSet: ZllBDTVarsCMVAnew 
+treeCut: ZllBDT_lowpt
+branchName: dnn23Low
+tensorflowConfig: tfZllDNN/export/Zll2016lowpt_15_qAloss_v1/Zll2016lowpt_15_qAloss_H6v2.cfg
+scalerDump: tfZllDNN/results//tfZllDNN/tfZllDNN_highpt23.dmpz/128-64-32-16-8/0.35-0.50-0.50-0.50-0.50/1.000e-03/rnd_1/scaler.dmp
+checkpoint: tfZllDNN/results//tfZllDNN/tfZllDNN_highpt23.dmpz/128-64-32-16-8/0.35-0.50-0.50-0.50-0.50/1.000e-03/rnd_1/checkpoints/model.ckpt
+
+[tfZllDNN_highpt23]
+MVAtype: <!MVAGeneral|type!>
+MVAsettings: <!MVAGeneral|SettingsAll_highd!>
+signals: [<!Plot_general|allSIG!>]
+backgrounds: [<!Plot_general|allBKG!>]
+treeVarSet: ZllBDTVarsCMVAnew 
 treeCut: ZllBDT_highpt
 
 [tfZllDNN_highpt15bsys]
