--- a/python/Zll2016config/datacards.ini
+++ b/python/Zll2016config/datacards.ini
@@ -16,10 +16,10 @@ EtabbRange = 32,0,5
 btagrange = 50,0,1
 
 ;BDT
-BDTrange = 15,-0.8,1
+#BDTrange = 15,-0.8,1
 
 ;DNN
-#BDTrange = 15,0,1
+BDTrange = 15,0,1
 
 ;IMPORTANT: this has to be exacly the same as the variable in vhbbPlotDef for the pre/postfit macro to work
 ;
@@ -38,16 +38,16 @@ MassRangeVV = 34,0, 255
 bTagVar = Jet_btagCMVAV2[hJCMVAV2idx[1]]
 
 ;BDT VH
-BDTlow = ZllBDT_lowptCMVA.Nominal
-BDThigh = ZllBDT_highptCMVA.Nominal
+#BDTlow = ZllBDT_lowptCMVA.Nominal
+#BDThigh = ZllBDT_highptCMVA.Nominal
 
 ;BDT with 23 inputs
 #BDTlow = ZllBDT_lowptCMVAnew.Nominal
 #BDThigh = ZllBDT_highptCMVAnew.Nominal
 
 ;DNN
-#BDTlow = dnn15Low.Nominal
-#BDThigh = dnn15High.Nominal
+BDTlow = dnn15Low.Nominal
+BDThigh = dnn15High.Nominal
 
 #BDTlow = dnn15Incl.Nominal
 #BDThigh = dnn15Incl.Nominal
@@ -58,6 +58,9 @@ BDThigh = ZllBDT_highptCMVA.Nominal
 #BDTlow = dnn15LowXE.Nominal
 #BDThigh = dnn15HighXE.Nominal
 
+
+#BDTlow = dnn15LowKinFit.Nominal
+#BDThigh = dnn15HighKinFit.Nominal
 
 ;BDT VV
 BDTVVlow = ZllBDTVV_lowpt.Nominal
@@ -706,11 +709,11 @@ ptRegionsDict = {
 ;List: Zuu_CRZlight_lowpt
 
 ;BDT only
-;List: ZeeBDT_lowpt,ZeeBDT_highpt,ZuuBDT_lowpt,ZuuBDT_highpt
+List: ZeeBDT_lowpt,ZeeBDT_highpt,ZuuBDT_lowpt,ZuuBDT_highpt
 ;List: ZuuBDT_lowpt
 
 ;all
-List: Zee_CRZlight_lowpt,Zee_CRZb_incl_lowpt,Zee_CRttbar_lowpt,ZeeBDT_lowpt,Zee_CRZlight_highpt,Zee_CRZb_incl_highpt,Zee_CRttbar_highpt,ZeeBDT_highpt,Zuu_CRZlight_lowpt,Zuu_CRZb_incl_lowpt,Zuu_CRttbar_lowpt,ZuuBDT_lowpt,Zuu_CRZlight_highpt,Zuu_CRZb_incl_highpt,Zuu_CRttbar_highpt,ZuuBDT_highpt
+;List: Zee_CRZlight_lowpt,Zee_CRZb_incl_lowpt,Zee_CRttbar_lowpt,ZeeBDT_lowpt,Zee_CRZlight_highpt,Zee_CRZb_incl_highpt,Zee_CRttbar_highpt,ZeeBDT_highpt,Zuu_CRZlight_lowpt,Zuu_CRZb_incl_lowpt,Zuu_CRttbar_lowpt,ZuuBDT_lowpt,Zuu_CRZlight_highpt,Zuu_CRZb_incl_highpt,Zuu_CRttbar_highpt,ZuuBDT_highpt
 
 ;;With boost veto
 ;List: Zee_CRZlight_lowpt_boostVeto,Zee_CRZb_incl_lowpt_boostVeto,Zee_CRttbar_lowpt_boostVeto,ZeeBDT_lowpt_boostVeto,Zee_CRZlight_highpt_boostVeto,Zee_CRZb_incl_highpt_boostVeto,Zee_CRttbar_highpt_boostVeto,ZeeBDT_highpt_boostVeto,Zuu_CRZlight_lowpt_boostVeto,Zuu_CRZb_incl_lowpt_boostVeto,Zuu_CRttbar_lowpt_boostVeto,ZuuBDT_lowpt_boostVeto,Zuu_CRZlight_highpt_boostVeto,Zuu_CRZb_incl_highpt_boostVeto,Zuu_CRttbar_highpt_boostVeto,ZuuBDT_highpt_boostVeto
