--- a/python/Zll2016config/general.ini
+++ b/python/Zll2016config/general.ini
@@ -31,6 +31,8 @@ GetMaxbbtagIndex = GetMaxbbtagIndex.GetMaxbbtagIndex()
 tf15incl = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_incl15')
 tf15low = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_lowpt15')
 tf15high = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_highpt15')
+tf23low = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_lowpt23')
+tf23high = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_highpt23')
 tf15highBtag = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_highpt15bsys')
 tf15highXe = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_highpt15xe')
 tf15lowXe = tensorflowEvaluator.tensorflowEvaluator(mvaName='tfZllDNN_lowpt15xe')
