--- a/python/Zll2016config/plots.ini
+++ b/python/Zll2016config/plots.ini
@@ -505,6 +505,7 @@ List: ZllBDT_lowpt,ZllBDT_highpt,Zll_CRZlight,Zll_CRZb_incl,Zll_CRttbar,Zll_CRZl
 ;var: Vpt,Veta,Vphi,Vm,Vtype,BDTlow,BDThigh,HT,HCSVmass,HCSVpt,HCSVeta,HCSVphi,HCSVregmass,HCSVregpt,HCSVregeta,HCSVregphi,HCSVregptbalance,MET,METphi,nVertices,Lepton0_pt,Lepton1_pt,Lepton0_reliso4,Lepton1_reliso4,Lepton0_eta
 ;var: PtRbb,PtRbbDATA,Vpt,Rbb
 
+var: HCSVmass,Vpt,BDThigh,BDTlow,HCSVregmass,HjMVA0_MVA,HjMVA1_MVA
 ;!!_*_*_*_*_*_
 ;For SR
 ;!!_*_*_*_*_*_
@@ -526,7 +527,7 @@ List: ZllBDT_lowpt,ZllBDT_highpt,Zll_CRZlight,Zll_CRZb_incl,Zll_CRttbar,Zll_CRZl
 
 varBDT: HCSVregmass,HCSVregpt,deltaPhiVH,HjMVA0_MVA,HjMVA1_MVA,HjCSV0_reg_pt,HjCSV1_reg_pt,Vm,bdtAddJets,Vpt,HCSVregptbalance,Etabb,softAct5,deltaRVH,MET
 
-var: dnn15HighBtagSysLog,dnn15HighBtagSys,dnn15Incl,dnn15InclLog,dnnLow,dnnLowLog,dnnHigh,dnnHighLog,dnnLowXELog,dnnHighXELog,dnnLowXE,dnnHighXE,<!Plot_general|varBDT!>
+#var: dnn15HighBtagSysLog,dnn15HighBtagSys,dnn15Incl,dnn15InclLog,dnnLow,dnnLowLog,dnnHigh,dnnHighLog,dnnLowXELog,dnnHighXELog,dnnLowXE,dnnHighXE,<!Plot_general|varBDT!>
 
 #!!_*_*_*_*_*_
 #Other Options
