--- a/python/Zll2016config/training.ini
+++ b/python/Zll2016config/training.ini
@@ -242,17 +242,19 @@ backgrounds: [<!Plot_general|allBKG!>]
 treeVarSet: ZllBDTVarsCMVAnew 
 treeCut: ZllBDT_lowpt
 branchName: dnn23Low
-tensorflowConfig: tfZllDNN/export/Zll2016lowpt_15_qAloss_v1/Zll2016lowpt_15_qAloss_H6v2.cfg
-scalerDump: tfZllDNN/results//tfZllDNN/tfZllDNN_highpt23.dmpz/128-64-32-16-8/0.35-0.50-0.50-0.50-0.50/1.000e-03/rnd_1/scaler.dmp
-checkpoint: tfZllDNN/results//tfZllDNN/tfZllDNN_highpt23.dmpz/128-64-32-16-8/0.35-0.50-0.50-0.50-0.50/1.000e-03/rnd_1/checkpoints/model.ckpt
+tensorflowConfig: tfZllDNN/export/Zll2016lowpt_23_qAloss_H4v1/Zll2016lowpt_23_qAloss_H4v1.cfg
+scalerDump: tfZllDNN/results/tfZllDNN/tfZllDNN_lowpt23.dmpz/512-256-128-64/0.50-0.70-0.80-0.90/3.000e-03/rnd_6/scaler.dmp
+checkpoint: tfZllDNN/results/tfZllDNN/tfZllDNN_lowpt23.dmpz/512-256-128-64/0.50-0.70-0.80-0.90/3.000e-03/rnd_6/checkpoints/model.ckpt
 
 [tfZllDNN_highpt23]
-MVAtype: <!MVAGeneral|type!>
-MVAsettings: <!MVAGeneral|SettingsAll_highd!>
 signals: [<!Plot_general|allSIG!>]
 backgrounds: [<!Plot_general|allBKG!>]
 treeVarSet: ZllBDTVarsCMVAnew 
 treeCut: ZllBDT_highpt
+branchName: dnn23High
+tensorflowConfig: tfZllDNN/Zll2016highpt_23_qAloss_H6v1.cfg
+scalerDump: tfZllDNN/results/tfZllDNN/tfZllDNN_highpt23.dmpz/128-64-32-16-8-8/0.50-0.50-0.50-0.50-0.50-0.50/3.000e-03/rnd_10/scaler.dmp
+checkpoint: tfZllDNN/results/tfZllDNN/tfZllDNN_highpt23.dmpz/128-64-32-16-8-8/0.50-0.50-0.50-0.50-0.50-0.50/3.000e-03/rnd_10/checkpoints/model.ckpt
 
 [tfZllDNN_highpt15bsys]
 MVAtype: <!MVAGeneral|type!>
