--- a/python/Zll2016config/datacards.ini
+++ b/python/Zll2016config/datacards.ini
@@ -46,9 +46,11 @@ bTagVar = Jet_btagCMVAV2[hJCMVAV2idx[1]]
 #BDThigh = ZllBDT_highptCMVAnew.Nominal
 
 ;DNN
-BDTlow = dnn15Low.Nominal
-BDThigh = dnn15High.Nominal
+;BDTlow = dnn15Low.Nominal
+;BDThigh = dnn15High.Nominal
 
+BDTlow = dnn23Low.Nominal
+BDThigh = dnn23High.Nominal
 #BDTlow = dnn15Incl.Nominal
 #BDThigh = dnn15Incl.Nominal
 
@@ -709,11 +711,13 @@ ptRegionsDict = {
 ;List: Zuu_CRZlight_lowpt
 
 ;BDT only
-List: ZeeBDT_lowpt,ZeeBDT_highpt,ZuuBDT_lowpt,ZuuBDT_highpt
-;List: ZuuBDT_lowpt
+;List: ZeeBDT_lowpt,ZeeBDT_highpt,ZuuBDT_lowpt,ZuuBDT_highpt
+;List: ZeeBDT_highpt
 
 ;all
 ;List: Zee_CRZlight_lowpt,Zee_CRZb_incl_lowpt,Zee_CRttbar_lowpt,ZeeBDT_lowpt,Zee_CRZlight_highpt,Zee_CRZb_incl_highpt,Zee_CRttbar_highpt,ZeeBDT_highpt,Zuu_CRZlight_lowpt,Zuu_CRZb_incl_lowpt,Zuu_CRttbar_lowpt,ZuuBDT_lowpt,Zuu_CRZlight_highpt,Zuu_CRZb_incl_highpt,Zuu_CRttbar_highpt,ZuuBDT_highpt
+
+List: Zee_CRZb_incl_highpt,Zee_CRttbar_highpt,ZeeBDT_highpt,Zuu_CRZlight_lowpt,Zuu_CRZb_incl_lowpt,Zuu_CRttbar_lowpt,ZuuBDT_lowpt,Zuu_CRZlight_highpt,Zuu_CRZb_incl_highpt,Zuu_CRttbar_highpt,ZuuBDT_highpt
 
 ;;With boost veto
 ;List: Zee_CRZlight_lowpt_boostVeto,Zee_CRZb_incl_lowpt_boostVeto,Zee_CRttbar_lowpt_boostVeto,ZeeBDT_lowpt_boostVeto,Zee_CRZlight_highpt_boostVeto,Zee_CRZb_incl_highpt_boostVeto,Zee_CRttbar_highpt_boostVeto,ZeeBDT_highpt_boostVeto,Zuu_CRZlight_lowpt_boostVeto,Zuu_CRZb_incl_lowpt_boostVeto,Zuu_CRttbar_lowpt_boostVeto,ZuuBDT_lowpt_boostVeto,Zuu_CRZlight_highpt_boostVeto,Zuu_CRZb_incl_highpt_boostVeto,Zuu_CRttbar_highpt_boostVeto,ZuuBDT_highpt_boostVeto
