--- a/python/Zll2016config/paths.ini
+++ b/python/Zll2016config/paths.ini
@@ -47,6 +47,7 @@ samplesinfo: <!Directories|vhbbpath!>/python/Zll2016config/samples_nosplit.ini
 ;plottingSamples: <!Directories|MVAin!>
 ;plottingSamples: <!Directories|MVAout!>
 plottingSamples: <!Directories|SYSout!>
+plottingSamples: root://t3dcachedb03.psi.ch:1094///pnfs/psi.ch/cms/trivcat/store/user/mbryner/VHbb/ZllHbb13TeV_V25/berger_ajidx_eval_180317/
 ;plottingSamples: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8redo_weights_btag_fsr/
 ;plottingSamples: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/gaperrin/VHbb/ZllHbb13TeV_V25/sys_v8_allw_addJESsys_sysMinMax_bTagsplit_rmvbr_MVAIDsplit_v2_VV_SBWeightVV_SBWeightVH/
 
@@ -146,27 +147,29 @@ HADDout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!C
 #SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhigh/
 
 #SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/berger_p2/ZllHbb13TeV_V25/sys/test_kinFitter_dnnHighLow/
-SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180524_dnn15low/
+#SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/berger_p2/ZllHbb13TeV_V25/sys/test_kinFitter_dnnHighLow/
+#SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180524_dnn15low/
+SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180529_dnn23low/
 #SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhigh/
 #SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhighLow/
 
 #SYSin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_retrainedBDT_dnn15highLow_incl_highBtag_XEhigh/
 #SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/berger_p2/ZllHbb13TeV_V25/sys/test_kinFitter_dnnHighLow/
 #SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180524_dnn15low/
-SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180524_dnn15highlow/
-
+#SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180524_dnn15highlow/
+SYSout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/eval/tf180529_dnn23highlow/
 ;MVAin: <!Directories|SYSout!>
 ;MVAout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/VHbb/ZllHbb13TeV_V25/eval_v15/
 
 ;MVAin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8redo_weights_btag_fsr_v2/
 MVAin: <!Directories|SYSout!> 
 #MVAin: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8redo_weights_btag_fsr_v2/
-MVAout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_dnn23_bdt_dnn15lowAndHigh_incl_dnnBtagHigh_retrainedBDT/
+#MVAout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/<!Configuration|user!>/ZllHbb13TeV_V25/sys/v8_dnn23_bdt_dnn15lowAndHigh_incl_dnnBtagHigh_retrainedBDT/
 
 ;;;;;;;;;;
 ;Samples used to reproduce 2016 results
 ;;;;;;;;;;
 
-#MVAout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/berger_p2/VHbb/ZllHbb13TeV_V25/eval_v12_gaelsxml/
+MVAout: root://t3dcachedb03.psi.ch:1094//pnfs/psi.ch/cms/trivcat/store/user/berger_p2/VHbb/ZllHbb13TeV_V25/eval_v12_gaelsxml/
 
 
